<resources>
    <string name="app_name">ExpenseTracker</string>
    <string name="title_activity_main">Expense Tracker</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_add_entry">Add Entry</string>
    <string name="menu_overview_day">Overview Day</string>
    <string name="menu_overview_month">Overview Month</string>
    <string name="menu_overview_all">Overview All</string>
    <string name="menu_statistics">Statistics</string>
    
    <string name="day_pager_week_plus">Week +</string>
    <string name="day_pager_week_minus">Week -</string>
    <string name="day_pager_today">Today</string>
    <string name="day_pager_no_items">No items</string>
    
    <string name="activity_new_entry_title">New Entry</string>
    <string name="new_entry_value">Value</string>
    <string name="new_entry_value_hint">0,00</string>
    <string name="new_entry_category">Categorie</string>
    <string name="new_entry_notes_hint">Notes</string>
    
    <string name="title_new_entry_section1">Value</string>
    <string name="title_new_entry_section2">Category</string>
    <string name="title_new_entry_section3">Description</string>
    
    <string name="please_wait">please wait ...</string>
    <string name="empty_list">no entries found</string>
    <string name="retrieving_items">Retriving items ...</string>
    <string name="cancel">Cancel</string>
    
    <string name="dialog_value_input_title">Value input</string>
    
    <string name="new_category_empty_message">Enter a new category before adding it</string>
    <string name="new_category_saved_message">Category saved</string>
    
    <string name="new_description_empty_message">Enter a new description before adding it</string>
    <string name="new_description_saved_message">Desciption saved</string>
    
    <string name="pref_exportpath_title">Export Path</string>
    <string name="pref_exportpath_descr">The place you want to export your database entries to</string>
    <string name="pref_export_db">Export</string>
    <string name="not_yet_implemented">Not yet implemented</string>
</resources>