<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/menu_overview_day"
        android:title="@string/menu_overview_day"
        android:icon="@drawable/ic_action_bar_daily"
        android:showAsAction="ifRoom" />
    
    <item android:id="@+id/menu_overview_month"
        android:title="@string/menu_overview_month"
        android:icon="@drawable/ic_action_bar_month"
        android:showAsAction="ifRoom" />
    
    <item android:id="@+id/menu_overview_all"
        android:title="@string/menu_overview_all"
        android:icon="@drawable/ic_action_all"
        android:showAsAction="ifRoom" />
    
    <item android:id="@+id/menu_statistics"
        android:title="@string/menu_statistics"
        android:icon="@drawable/ic_action_statistics"
        android:showAsAction="ifRoom" />
    
    <item android:id="@+id/menu_export"
        android:title="@string/pref_export_db"
        android:icon="@drawable/ic_action_export" />

    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_action_bar_settings"
        android:showAsAction="ifRoom" />    

</menu>