<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:padding="4dip"
        android:gravity="center_horizontal"
        android:layout_width="match_parent" android:layout_height="match_parent">

    <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1">
    </android.support.v4.view.ViewPager>

    <RelativeLayout
            android:gravity="center" 
            android:measureWithLargestChild="true"
            android:layout_width="match_parent" 
            android:layout_height="wrap_content"
            android:layout_weight="0.05">

        <TextView android:id="@+id/goto_today"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dip"
            android:layout_marginRight="25dip"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:text="@string/day_pager_today">
        </TextView>
            
        <TextView android:id="@+id/goto_week_plus"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
           	android:layout_toLeftOf="@id/goto_today"
           	android:layout_centerVertical="true"
            android:text="@string/day_pager_week_plus">
        </TextView>
        
        
        <TextView android:id="@+id/goto_week_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/goto_today"
            android:text="@string/day_pager_week_minus">
        </TextView>
    </RelativeLayout>
</LinearLayout>